Fixed spacing

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ main {
     width: 100%;
     min-height: 100vh;
     display: flex;
-    justify-self: center;
+    justify-content: center;
     align-items: center;
 }
 
@@ -136,7 +136,7 @@ main {
         font-size: 12px;
     }
     .container {
-        width: 85%;
+        width: 90%;
         max-width: 1100px;
     }
     
@@ -175,7 +175,7 @@ main {
         width: 85%;
         max-width: 950px;
         grid-template-columns: auto;
-        grid-template-rows: 2fr 1fr;
+        grid-template-rows: 2fr max-content;
         padding: 5rem 0;
     }
     
